fix(blog): fixed scrollbar gutter behavior

--- a/apps/blog/src/app/global.css
+++ b/apps/blog/src/app/global.css
@@ -120,6 +120,7 @@
   * {
     scrollbar-width: thin;
     scrollbar-color: var(--border) transparent;
+    scrollbar-gutter: stable;
   }
 
   body {
